--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
         "serve": "^6.4.9",
         "tslint": "^5.9.1",
         "tslint-microsoft-contrib": "^5.0.2",
-        "typescript": "^2.6.2"
+        "typescript": "^2.7.0-rc"
     }
 }
