--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@iota-pico/examples-browser-ts",
-    "version": "0.6.0",
+    "version": "0.6.1",
     "description": "IOTA Pico Framework Examples for Browser using TypeScript",
     "engines": {
         "node": ">=8"
@@ -18,15 +18,15 @@
     "author": "martyn@iota.eco",
     "license": "MIT",
     "dependencies": {
-        "@iota-pico/api": "^0.6.0",
-        "@iota-pico/core": "^0.6.0",
-        "@iota-pico/pal-browser": "^0.6.0",
+        "@iota-pico/api": "^0.6.1",
+        "@iota-pico/core": "^0.6.1",
+        "@iota-pico/pal-browser": "^0.6.1",
         "bootstrap": "^4.0.0",
-        "systemjs": "^0.20.19",
+        "systemjs": "^0.21.0",
         "systemjs-plugin-json": "^0.3.0"
     },
     "devDependencies": {
-        "@types/node": "^9.3.0",
+        "@types/node": "^9.4.5",
         "copyfiles": "^1.2.0",
         "npm-run-all": "^4.1.2",
         "nsp": "^3.1.0",
@@ -34,6 +34,6 @@
         "serve": "^6.4.9",
         "tslint": "^5.9.1",
         "tslint-microsoft-contrib": "^5.0.2",
-        "typescript": "^2.7.0-rc"
+        "typescript": "^2.7.1"
     }
 }
