Update coverage config

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ install:
   - npm link @iota-pico/core @iota-pico/api @iota-pico/pal-browser
   - npm install
 script:
-  - npm run dist
+  - npm run dist || travis_terminate 1
+  - npm run security || travis_terminate 1
 cache:
   directories:
     - "node_modules"
