--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@iota-pico/examples-browser-ts",
+    "name": "@iota-pico/api-examples-browser",
     "version": "0.9.0",
-    "description": "IOTA Pico Framework Examples for Browser using TypeScript",
+    "description": "IOTA Pico Framework API Examples for Browser",
     "engines": {
         "node": ">=8"
     },
@@ -26,14 +26,14 @@
         "systemjs-plugin-json": "^0.3.0"
     },
     "devDependencies": {
-        "@types/node": "^9.4.5",
-        "copyfiles": "^1.2.0",
+        "@types/node": "^9.4.7",
+        "copyfiles": "^2.0.0",
         "npm-run-all": "^4.1.2",
-        "nsp": "^3.1.0",
+        "nsp": "^3.2.1",
         "rimraf": "^2.6.2",
-        "serve": "^6.4.9",
+        "serve": "^6.5.3",
         "tslint": "^5.9.1",
-        "tslint-microsoft-contrib": "^5.0.2",
-        "typescript": "^2.7.1"
+        "tslint-microsoft-contrib": "^5.0.3",
+        "typescript": "^2.7.2"
     }
 }
