--- a/.nsprc
+++ b/.nsprc
@@ -1,4 +1,4 @@
 {
-  "org": "iotaeco",
-  "integration": "fb6603c2-3547-48fa-8404-9e55cd44ed21"
+  "org": "https://github.com/iota-pico",
+  "integration": "1db1a220-1c26-4475-a991-160a4b3d38f6"
 }
