--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,20 @@ node_js:
   - "node"
 install:
   - cd ../../
-  - git clone --branch=$TRAVIS_BRANCH https://github.com/iotaeco/iota-pico-core.git iotaeco/iota-pico-core
-  - cd iotaeco/iota-pico-core
+  - git clone --branch=$TRAVIS_BRANCH https://github.com/iota-pico/core.git https://github.com/iota-pico/core
+  - cd https://github.com/iota-pico/core
   - npm link
   - cd ../../
-  - git clone --branch=$TRAVIS_BRANCH https://github.com/iotaeco/iota-pico-api.git iotaeco/iota-pico-api
-  - cd iotaeco/iota-pico-api
+  - git clone --branch=$TRAVIS_BRANCH https://github.com/iota-pico/api.git https://github.com/iota-pico/api
+  - cd https://github.com/iota-pico/api
   - npm link @iota-pico/core
   - npm link
   - cd ../../
-  - git clone --branch=$TRAVIS_BRANCH https://github.com/iotaeco/iota-pico-pal-browser.git iotaeco/iota-pico-pal-browser
-  - cd iotaeco/iota-pico-pal-browser
+  - git clone --branch=$TRAVIS_BRANCH https://github.com/iota-pico/pal-browser.git https://github.com/iota-pico/pal-browser
+  - cd https://github.com/iota-pico/pal-browser
   - npm link @iota-pico/core
   - npm link
-  - cd ../iota-pico-api-examples-browser
+  - cd ../api-examples-browser
   - npm link @iota-pico/core @iota-pico/api @iota-pico/pal-browser
   - npm install
 script:
