--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,16 @@ node_js:
 install:
   - cd ../../
   - git clone --branch=$TRAVIS_BRANCH https://github.com/iota-pico/core.git core
-  - cd https://github.com/iota-pico/core
+  - cd core
   - npm link
   - cd ../../
   - git clone --branch=$TRAVIS_BRANCH https://github.com/iota-pico/api.git api
-  - cd https://github.com/iota-pico/api
+  - cd api
   - npm link @iota-pico/core
   - npm link
   - cd ../../
   - git clone --branch=$TRAVIS_BRANCH https://github.com/iota-pico/pal-browser.git pal-browser
-  - cd https://github.com/iota-pico/pal-browser
+  - cd pal-browser
   - npm link @iota-pico/core
   - npm link
   - cd ../api-examples-browser
