--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,16 @@ node_js:
   - "node"
 install:
   - cd ../../
-  - git clone --branch=$TRAVIS_BRANCH https://github.com/iota-pico/core.git core
+  - git clone --branch=$TRAVIS_BRANCH https://github.com/iota-pico/core.git iota-pico/core
   - cd core
   - npm link
   - cd ../../
-  - git clone --branch=$TRAVIS_BRANCH https://github.com/iota-pico/api.git api
+  - git clone --branch=$TRAVIS_BRANCH https://github.com/iota-pico/api.git iota-pico/api
   - cd api
   - npm link @iota-pico/core
   - npm link
   - cd ../../
-  - git clone --branch=$TRAVIS_BRANCH https://github.com/iota-pico/pal-browser.git pal-browser
+  - git clone --branch=$TRAVIS_BRANCH https://github.com/iota-pico/pal-browser.git iota-pico/pal-browser
   - cd pal-browser
   - npm link @iota-pico/core
   - npm link
