--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,16 @@ node_js:
 install:
   - cd ../../
   - git clone --branch=$TRAVIS_BRANCH https://github.com/iota-pico/core.git iota-pico/core
-  - cd core
+  - cd iota-pico/core
   - npm link
   - cd ../../
   - git clone --branch=$TRAVIS_BRANCH https://github.com/iota-pico/api.git iota-pico/api
-  - cd api
+  - cd iota-pico/api
   - npm link @iota-pico/core
   - npm link
   - cd ../../
   - git clone --branch=$TRAVIS_BRANCH https://github.com/iota-pico/pal-browser.git iota-pico/pal-browser
-  - cd pal-browser
+  - cd iota-pico/pal-browser
   - npm link @iota-pico/core
   - npm link
   - cd ../api-examples-browser
