--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "rimraf": "^2.6.2",
         "serve": "^6.5.5",
         "tslint": "^5.9.1",
+        "tslint-eslint-rules": "^5.1.0",
         "tslint-microsoft-contrib": "^5.0.3",
         "typescript": "^2.8.3",
         "webpack": "^4.6.0",
