--- a/package.json
+++ b/package.json
@@ -17,24 +17,24 @@
     "author": "martyn@iota.eco",
     "license": "MIT",
     "dependencies": {
-        "@iota-pico/api": "^1.0.1",
-        "@iota-pico/core": "^1.0.1",
-        "@iota-pico/pal-browser": "^1.0.1",
-        "bootstrap": "^4.3.1",
-        "systemjs": "^3.0.0",
-        "systemjs-plugin-json": "^0.3.0"
+        "@iota-pico/api": "1.0.1",
+        "@iota-pico/core": "1.0.1",
+        "@iota-pico/pal-browser": "1.0.1",
+        "bootstrap": "4.3.1",
+        "systemjs": "3.0.0",
+        "systemjs-plugin-json": "0.3.0"
     },
     "devDependencies": {
-        "@types/node": "^11.9.4",
-        "copyfiles": "^2.1.0",
-        "npm-run-all": "^4.1.5",
-        "rimraf": "^2.6.3",
-        "serve": "^10.1.2",
-        "tslint": "^5.12.1",
-        "tslint-eslint-rules": "^5.4.0",
-        "tslint-microsoft-contrib": "^6.0.0",
-        "typescript": "^3.3.3",
-        "webpack": "^4.29.3",
-        "webpack-cli": "^3.2.3"
+        "@types/node": "11.9.4",
+        "copyfiles": "2.1.0",
+        "npm-run-all": "4.1.5",
+        "rimraf": "2.6.3",
+        "serve": "10.1.2",
+        "tslint": "5.12.1",
+        "tslint-eslint-rules": "5.4.0",
+        "tslint-microsoft-contrib": "6.0.0",
+        "typescript": "3.3.3",
+        "webpack": "4.29.3",
+        "webpack-cli": "3.2.3"
     }
 }
